@@ -38,6 +38,7 @@ protected:
   unsigned int m_iRow4adr ;
   unsigned int m_iActualpos;				// actual cursor possition
   int          m_iBackLight;
+  int          m_iLCDContrast;
   bool         m_bUpdate[MAX_ROWS];
   CStdString   m_strLine[MAX_ROWS];
   int          m_iPos[MAX_ROWS];
